# machine_learning

./: ML_LearnTypes.ipynb  ML_index.ipynb  README.md  StarWarsModel.py  pyproject.toml  requirements.txt
core/: ML_LearnTypes.ipynb  ML_index.ipynb  StarWarsModel.py  log.txt
core/.ipynb_checkpoints/: ML_index-checkpoint.ipynb
data/: dados_cerveja.xlsx  dados_cerveja_nota.xlsx  dados_frutas.xlsx
